more tweaks to dnp3 action/result

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -394,17 +394,11 @@ filter {
     }
   }
 
-  if ([zeek_dnp3]) {
-    ruby {
-      # action = fc_reply:iin_flags
-      id => "ruby_zeek_dnp3_generate_action"
-      code => "
-        actions = Array.new unless (actions = event.get('[zeek][action]'))
-        actions.append([event.get('[zeek_dnp3][fc_reply]'),
-                        Array(event.get('[zeek_dnp3][iin_flags]')).join(',')].compact.join(':'))
-        event.set('[zeek][action]', actions)"
-    }
-  }
+  # dnp3: fc_reply and iin_flags
+  if ([zeek_dnp3][fc_reply])  { mutate { id => "mutate_merge_zeek_dnp3_fc_reply"
+                                         merge => { "[zeek][result]" => "[zeek_dnp3][fc_reply]" } } }
+  if ([zeek_dnp3][iin_flags]) { mutate { id => "mutate_merge_zeek_dnp3_iin_flags"
+                                         merge => { "[zeek][result]" => "[zeek_dnp3][iin_flags]" } } }
 
   if ([zeek_dns]) {
     # DNS result is populated by rcode_name (with NOERROR being translated to Success), and rejected
