--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -25,7 +25,7 @@ command=/usr/local/bin/zeek_carve_watcher.py
   --min-bytes %(ENV_EXTRACTED_FILE_MIN_BYTES)s
   --max-bytes %(ENV_EXTRACTED_FILE_MAX_BYTES)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
-user=monitor
+user=%(ENV_PUSER)s
 autostart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -48,7 +48,7 @@ command=/usr/local/bin/zeek_carve_scanner.py
   --malass-limit %(ENV_MALASS_MAX_REQUESTS)s
   --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
   --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
-user=monitor
+user=%(ENV_PUSER)s
 autostart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -67,7 +67,7 @@ command=/usr/local/bin/zeek_carve_logger.py
   --preserve %(ENV_EXTRACTED_FILE_PRESERVATION)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
   --zeek-log "%(ENV_ZEEK_LOG_DIRECTORY)s"
-user=monitor
+user=%(ENV_PUSER)s
 autostart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -79,8 +79,8 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:freshclam]
-command=/usr/bin/freshclam freshclam --user monitor --config-file=/etc/clamav/freshclam.conf --daemon
-user=monitor
+command=/usr/bin/freshclam freshclam --user %(ENV_PUSER)s --config-file=/etc/clamav/freshclam.conf --daemon
+user=%(ENV_PUSER)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_FRESHCLAM)s
 autorestart=true
 startsecs=0
@@ -94,7 +94,7 @@ redirect_stderr=true
 
 [program:clamd]
 command=/usr/sbin/clamd -c /etc/clamav/clamd.conf
-user=monitor
+user=%(ENV_PUSER)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
 autorestart=true
 startsecs=0
