--- a/logstash/supervisord.conf
+++ b/logstash/supervisord.conf
@@ -17,7 +17,7 @@ serverurl=http://127.0.0.1:9001
 
 [program:logstash]
 command=/usr/local/bin/logstash-start.sh
-user=logstash
+user=%(ENV_PUSER)s
 autostart=true
 startsecs=0
 startretries=0
