--- a/moloch/supervisord.conf
+++ b/moloch/supervisord.conf
@@ -30,7 +30,7 @@ redirect_stderr=true
 
 [program:wise]
 command=/data/wise_service.sh
-user=%(ENV_MOLOCHUSER)s
+user=%(ENV_PUSER)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -41,7 +41,7 @@ redirect_stderr=true
 
 [program:viewer]
 command=/data/viewer_service.sh
-user=%(ENV_MOLOCHUSER)s
+user=%(ENV_PUSER)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -62,7 +62,7 @@ command=python3 /data/pcap_moloch_processor.py
   --moloch /data/moloch/bin/moloch-capture
   --autotag "%(ENV_AUTO_TAG)s"
   --managed "%(ENV_MANAGE_PCAP_FILES)s"
-user=%(ENV_MOLOCHUSER)s
+user=%(ENV_PUSER)s
 startsecs=15
 startretries=1
 stopasgroup=true
@@ -74,7 +74,7 @@ redirect_stderr=true
 
 [program:readme]
 command=python3 -m http.server 8000
-user=%(ENV_MOLOCHUSER)s
+user=%(ENV_PUSER)s
 directory=%(ENV_MOLOCHDIR)s/doc
 stopasgroup=true
 killasgroup=true
