--- a/pcap-capture/supervisord.conf
+++ b/pcap-capture/supervisord.conf
@@ -26,7 +26,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 autostart=%(ENV_PCAP_ENABLE_NETSNIFF)s
 directory=%(ENV_PCAP_PATH)s
-user=%(ENV_PCAP_USER)s
+user=%(ENV_PUSER)s
 
 [include]
 files = /etc/supervisor.d/*.conf
