--- a/pcap-capture/templates/netsniff.template
+++ b/pcap-capture/templates/netsniff.template
@@ -6,4 +6,4 @@ stopasgroup=true
 killasgroup=true
 autostart=%(ENV_PCAP_ENABLE_NETSNIFF)s
 directory=%(ENV_PCAP_PATH)s
-user=%(ENV_PCAP_USER)s
+user=%(ENV_PUSER)s
