--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -36,7 +36,7 @@ command=python3 /usr/local/bin/pcap_watcher.py
   --ignore-existing "%(ENV_PCAP_PIPELINE_IGNORE_PREEXISTING)s"
   --start-sleep 60
   --directory "%(ENV_PCAP_PATH)s"/processed
-user=%(ENV_MONITOR_USER)s
+user=%(ENV_PUSER)s
 startsecs=65
 startretries=1
 stopasgroup=true
