--- a/zeek/supervisord.conf
+++ b/zeek/supervisord.conf
@@ -29,7 +29,7 @@ command=python3 /usr/local/bin/pcap_zeek_processor.py
   --autozeek "%(ENV_ZEEK_AUTO_ANALYZE_PCAP_FILES)s"
   --extract "%(ENV_ZEEK_EXTRACTOR_MODE)s"
   --zeek-directory /zeek/upload
-user=%(ENV_ZEEKUSER)s
+user=%(ENV_PUSER)s
 startsecs=15
 startretries=1
 stopasgroup=true
