--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ version: '3.7'
 ################################################################################
 # Commonly tweaked configuration options
 #-------------------------------------------------------------------------------
+x-process-variables: &process-variables
+  # docker containers will run processes as unprivileged users with UID:GID
+  PUID : 1000
+  PGID : 1000
+
 x-auth-variables: &auth-variables
   # authentication method: encrypted HTTP basic authentication ('true') vs LDAP ('false')
   NGINX_BASIC_AUTH : 'true'
@@ -107,6 +112,7 @@ services:
     restart: "no"
     hostname: elasticsearch
     environment:
+      << : *process-variables
       logger.level : 'INFO'
       bootstrap.memory_lock : 'true'
       ES_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
@@ -142,6 +148,7 @@ services:
     restart: "no"
     hostname: kibana
     environment:
+      << : *process-variables
       << : *kibana-variables
       ELASTICSEARCH_URL : 'http://elasticsearch:9200'
       VIRTUAL_HOST : 'kibana.malcolm.local'
@@ -168,6 +175,7 @@ services:
     restart: "no"
     hostname: elastalert
     environment:
+      << : *process-variables
       ELASTICSEARCH_URL : 'http://elasticsearch:9200'
       ES_HOST : 'elasticsearch'
       ES_PORT : 9200
@@ -196,6 +204,7 @@ services:
     restart: "no"
     hostname: curator
     environment:
+      << : *process-variables
       << : *curator-variables
       ES_HOST : 'elasticsearch'
       ES_PORT : 9200
@@ -217,6 +226,7 @@ services:
     restart: "no"
     hostname: logstash
     environment:
+      << : *process-variables
       << : *logstash-variables
       << : *common-beats-variables
       << : *common-lookup-variables
@@ -252,6 +262,7 @@ services:
     restart: "no"
     hostname: filebeat
     environment:
+      << : *process-variables
       << : *nginx-variables
       << : *common-upload-variables
       << : *common-beats-variables
@@ -292,6 +303,7 @@ services:
     env_file:
       - ./auth.env
     environment:
+      << : *process-variables
       << : *common-upload-variables
       << : *moloch-variables
       MOLOCH_VERSION : '2.3.1'
@@ -332,6 +344,7 @@ services:
     restart: "no"
     hostname: zeek
     environment:
+      << : *process-variables
       << : *common-upload-variables
       << : *zeek-variables
     ulimits:
@@ -359,6 +372,7 @@ services:
     restart: "no"
     hostname: filemon
     environment:
+      << : *process-variables
       << : *zeek-variables
     expose:
       - 3310
@@ -388,6 +402,7 @@ services:
       - NET_RAW
       - SYS_ADMIN
     environment:
+      << : *process-variables
       << : *pcap-capture-variables
     volumes:
       - ./pcap/upload:/pcap
@@ -405,6 +420,7 @@ services:
     restart: "no"
     hostname: pcapmon
     environment:
+      << : *process-variables
       << : *common-upload-variables
       ELASTICSEARCH_URL : 'http://elasticsearch:9200'
     depends_on:
@@ -430,6 +446,7 @@ services:
     env_file:
       - ./auth.env
     environment:
+      << : *process-variables
       SITE_NAME : 'Capture File and Log Archive Upload'
       VIRTUAL_HOST : 'upload.malcolm.local'
     depends_on:
@@ -454,6 +471,7 @@ services:
     restart: "no"
     hostname: htadmin
     environment:
+      << : *process-variables
       << : *auth-variables
       VIRTUAL_HOST : 'htadmin.malcolm.local'
     expose:
@@ -476,6 +494,7 @@ services:
     restart: "no"
     hostname: freq
     environment:
+      << : *process-variables
       << : *common-lookup-variables
       VIRTUAL_HOST : 'freq.malcolm.local'
     expose:
@@ -494,6 +513,7 @@ services:
     restart: "no"
     hostname: name-map-ui
     environment:
+      << : *process-variables
       VIRTUAL_HOST : 'name-map-ui.malcolm.local'
     expose:
       - 8080
@@ -515,6 +535,7 @@ services:
     restart: "no"
     hostname: nginx-proxy
     environment:
+      << : *process-variables
       << : *auth-variables
       << : *nginx-variables
     depends_on:
