--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -18,7 +18,7 @@ serverurl=unix:///var/run/supervisor.sock
 
 [program:filebeat]
 command=/usr/local/bin/docker-entrypoint -e --strict.perms=false
-user=filebeat
+user=%(ENV_PUSER)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -35,7 +35,7 @@ command=bash -c "/data/elastic_search_status.sh && /usr/local/bin/docker-entrypo
   --path.data /usr/share/filebeat-nginx/data \
   -c /usr/share/filebeat-nginx/filebeat-nginx.yml \
   --modules nginx"
-user=filebeat
+user=%(ENV_PUSER)s
 autostart=%(ENV_NGINX_LOG_ACCESS_AND_ERRORS)s
 startsecs=30
 startretries=2000000000
