--- a/kibana/supervisord.conf
+++ b/kibana/supervisord.conf
@@ -18,7 +18,7 @@ serverurl=unix:///var/run/supervisor.sock
 
 [program:kibana]
 command=/data/kibana.sh
-user=kibana
+user=%(ENV_PUSER)s
 autostart=true
 startsecs=0
 startretries=0
@@ -31,7 +31,7 @@ redirect_stderr=true
 
 [program:idxinit]
 command=bash -c "sleep 180 && /data/elastic_search_status.sh -w && /data/kibana_index_refresh.py -v"
-user=kibana
+user=%(ENV_PUSER)s
 autostart=true
 autorestart=false
 startsecs=0
@@ -45,7 +45,7 @@ redirect_stderr=true
 
 [program:maps]
 command=/usr/bin/http-server /opt/maps --cors='*' -d false -i false --no-dotfiles -p %(ENV_KIBANA_OFFLINE_REGION_MAPS_PORT)s
-user=kibana
+user=%(ENV_PUSER)s
 autostart=%(ENV_KIBANA_OFFLINE_REGION_MAPS)s
 startsecs=0
 startretries=0
