--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,10 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.6.2
+    build:
+      context: .
+      dockerfile: Dockerfiles/elasticsearch.Dockerfile
+    image: malcolmnetsec/elasticsearch-oss:2.1.1
     restart: "no"
     hostname: elasticsearch
     environment:
