work in progress on specifying uid/gid for docker process

--- a/name-map-ui/config/nginx.conf
+++ b/name-map-ui/config/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes 1;
 error_log stderr warn;
-pid /run/nginx.pid;
+pid /tmp/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -16,8 +16,8 @@ http {
                           '"$http_user_agent" "$http_x_forwarded_for" '
                           '$request_time $upstream_response_time $pipe $upstream_cache_status';
 
-    access_log /dev/stdout main_timed;
-    error_log /dev/stderr notice;
+    access_log /var/log/nginx/access.log main_timed;
+    error_log /var/log/nginx/error.log notice;
 
     keepalive_timeout 65;
 
