--- a/pcap-capture/supervisord.conf
+++ b/pcap-capture/supervisord.conf
@@ -5,6 +5,7 @@ file=/var/run/supervisor.sock   ; (the path to the socket file)
 chmod=0700
 
 [supervisord]
+user=root
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
