work in progress on specifying uid/gid for docker process

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -1,20 +1,20 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 chmod=0700
 
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
+pidfile=/tmp/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [program:watcher]
 command=/usr/local/bin/zeek_carve_watcher.py
@@ -25,7 +25,6 @@ command=/usr/local/bin/zeek_carve_watcher.py
   --min-bytes %(ENV_EXTRACTED_FILE_MIN_BYTES)s
   --max-bytes %(ENV_EXTRACTED_FILE_MAX_BYTES)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
-user=%(ENV_PUSER)s
 autostart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -48,7 +47,6 @@ command=/usr/local/bin/zeek_carve_scanner.py
   --malass-limit %(ENV_MALASS_MAX_REQUESTS)s
   --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
   --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
-user=%(ENV_PUSER)s
 autostart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -67,7 +65,6 @@ command=/usr/local/bin/zeek_carve_logger.py
   --preserve %(ENV_EXTRACTED_FILE_PRESERVATION)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
   --zeek-log "%(ENV_ZEEK_LOG_DIRECTORY)s"
-user=%(ENV_PUSER)s
 autostart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
@@ -79,8 +76,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:freshclam]
-command=/usr/bin/freshclam freshclam --user %(ENV_PUSER)s --config-file=/etc/clamav/freshclam.conf --daemon
-user=%(ENV_PUSER)s
+command=/usr/bin/freshclam freshclam --config-file=/etc/clamav/freshclam.conf --daemon
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_FRESHCLAM)s
 autorestart=true
 startsecs=0
@@ -94,7 +90,6 @@ redirect_stderr=true
 
 [program:clamd]
 command=/usr/sbin/clamd -c /etc/clamav/clamd.conf
-user=%(ENV_PUSER)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
 autorestart=true
 startsecs=0
