--- a/file-upload/supervisord.conf
+++ b/file-upload/supervisord.conf
@@ -25,7 +25,8 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:php]
-command=php-fpm7.3 -F -R -g /var/run/php-fpm.pid
+command=php-fpm7.3 -F -R -g /tmp/php-fpm.pid
+user=%(ENV_PUSER)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
