--- a/pcap-capture/supervisord.conf
+++ b/pcap-capture/supervisord.conf
@@ -1,21 +1,20 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 chmod=0700
 
 [supervisord]
-user=root
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
+pidfile=/tmp/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [program:netsniff-roll]
 startsecs=15
@@ -27,7 +26,6 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 autostart=%(ENV_PCAP_ENABLE_NETSNIFF)s
 directory=%(ENV_PCAP_PATH)s
-user=%(ENV_PUSER)s
 
 [include]
 files = /etc/supervisor.d/*.conf
