--- a/zeek/supervisord.conf
+++ b/zeek/supervisord.conf
@@ -1,20 +1,20 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 chmod=0700
 
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
+pidfile=/tmp/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [program:pcap-zeek]
 command=python3 /usr/local/bin/pcap_zeek_processor.py
@@ -29,7 +29,6 @@ command=python3 /usr/local/bin/pcap_zeek_processor.py
   --autozeek "%(ENV_ZEEK_AUTO_ANALYZE_PCAP_FILES)s"
   --extract "%(ENV_ZEEK_EXTRACTOR_MODE)s"
   --zeek-directory /zeek/upload
-user=%(ENV_PUSER)s
 startsecs=15
 startretries=1
 stopasgroup=true
