--- a/logstash/supervisord.conf
+++ b/logstash/supervisord.conf
@@ -5,9 +5,9 @@ port=0.0.0.0:9001
 
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
-childlogdir=/var/log/supervisor
+logfile=/dev/null
+logfile_maxbytes=0
+pidfile=/tmp/supervisord.pid
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
@@ -17,7 +17,6 @@ serverurl=http://127.0.0.1:9001
 
 [program:logstash]
 command=/usr/local/bin/logstash-start.sh
-user=%(ENV_PUSER)s
 autostart=true
 startsecs=0
 startretries=0
