--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -1,20 +1,20 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 chmod=0700
 
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
-childlogdir=/var/log/supervisor
+logfile=/dev/null
+logfile_maxbytes=0
+pidfile=/tmp/supervisord.pid
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [program:filebeat]
 command=/usr/local/bin/docker-entrypoint -e --strict.perms=false
@@ -48,6 +48,7 @@ redirect_stderr=true
 
 [program:watch-upload]
 command=/bin/bash -c "sleep 30 && /data/filebeat-watch-zeeklogs-uploads-folder.sh"
+user=root
 startsecs=35
 startretries=1
 stopasgroup=true
@@ -60,6 +61,7 @@ redirect_stderr=true
 [program:cron]
 autorestart=false
 command=/data/cron_env_centos.sh
+user=root
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
