--- a/moloch/supervisord.conf
+++ b/moloch/supervisord.conf
@@ -1,20 +1,20 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 chmod=0700
 
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
-childlogdir=/var/log/supervisor
+logfile=/dev/null
+logfile_maxbytes=0
+pidfile=/tmp/supervisord.pid
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [program:initialize]
 command=/data/initmoloch.sh
@@ -30,7 +30,6 @@ redirect_stderr=true
 
 [program:wise]
 command=/data/wise_service.sh
-user=%(ENV_PUSER)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -41,7 +40,6 @@ redirect_stderr=true
 
 [program:viewer]
 command=/data/viewer_service.sh
-user=%(ENV_PUSER)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -62,7 +60,6 @@ command=python3 /data/pcap_moloch_processor.py
   --moloch /data/moloch/bin/moloch-capture
   --autotag "%(ENV_AUTO_TAG)s"
   --managed "%(ENV_MANAGE_PCAP_FILES)s"
-user=%(ENV_PUSER)s
 startsecs=15
 startretries=1
 stopasgroup=true
@@ -74,7 +71,6 @@ redirect_stderr=true
 
 [program:readme]
 command=python3 -m http.server 8000
-user=%(ENV_PUSER)s
 directory=%(ENV_MOLOCHDIR)s/doc
 stopasgroup=true
 killasgroup=true
