--- a/nginx/supervisord.conf
+++ b/nginx/supervisord.conf
@@ -1,20 +1,20 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 chmod=0700
 
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
-childlogdir=/var/log/supervisor
+logfile=/dev/null
+logfile_maxbytes=0
+pidfile=/tmp/supervisord.pid
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [program:nginx]
 command=/usr/sbin/nginx
@@ -28,6 +28,7 @@ redirect_stderr=true
 
 [program:logaccess]
 command=/usr/bin/tail -F /var/log/nginx/access.log
+user=%(ENV_PUSER)s
 startsecs=10
 startretries=2000000000
 stopasgroup=true
@@ -40,6 +41,7 @@ redirect_stderr=false
 
 [program:logerrors]
 command=/usr/bin/tail -F /var/log/nginx/error.log
+user=%(ENV_PUSER)s
 startsecs=10
 startretries=2000000000
 stopasgroup=true
