--- a/pcap-capture/supervisord.conf
+++ b/pcap-capture/supervisord.conf
@@ -6,9 +6,9 @@ chmod=0700
 
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
+logfile=/dev/null
+logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
-childlogdir=/var/log/supervisor
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
