--- a/kibana/supervisord.conf
+++ b/kibana/supervisord.conf
@@ -55,7 +55,7 @@ redirect_stderr=true
 
 [program:cron]
 autorestart=true
-command=/usr/local/bin/supercronic "%(ENV_SUPERCRONIC_CRONTAB)s"
+command=bash -c "/usr/local/bin/supercronic -split-logs %(ENV_SUPERCRONIC_CRONTAB)s >/dev/null"
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
