--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -59,9 +59,9 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:cron]
-autorestart=false
-command=/data/cron_env_centos.sh
-user=root
+autorestart=true
+command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
+user=%(ENV_PUSER)s
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
