don't drop privs globally in pcap-capture container, as we need to retain capabilities

--- a/pcap-capture/supervisord.conf
+++ b/pcap-capture/supervisord.conf
@@ -6,6 +6,7 @@ chmod=0700
 
 [supervisord]
 nodaemon=true
+user=root
 logfile=/dev/null
 logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
@@ -19,6 +20,7 @@ serverurl=unix:///tmp/supervisor.sock
 [program:netsniff-roll]
 startsecs=15
 command=/usr/local/bin/netsniff-roll.sh
+user=%(ENV_PUSER)s
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
