a pretty good first pass at populating elasticsearch ECS fields (see issue #79)
Squashed commit of the following:

commit 523b456c24601042878b37f087c7f671eba00546
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Fri Jul 17 11:57:38 2020 -0600

    action/result is very granular and difficult to map, commenting for now

commit 99b1c67d3ea1aacace5cdd5fe7196d96190e8d88
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Fri Jul 17 08:48:25 2020 -0600

    more work on ECS normalization

commit 665f821060afb1b198a45e0adb8833494dcd2f5f
Merge: fccff06 186ce96
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Thu Jul 16 12:57:57 2020 -0600

    Merge branch 'development' into topic/ecs

commit fccff064d121602931160f4a1d402625eb130839
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Wed Jul 15 13:47:11 2020 -0600

    more work in ECS normalization

commit 049c234f3bbf042f1a96ab2abce09c8d897184cd
Merge: 542401c 7b3db78
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Wed Jul 15 11:35:18 2020 -0600

    Merge remote-tracking branch 'upstream/development' into topic/ecs

commit 542401c932ac72a9ca69ab3e36086560a8d2fda8
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Wed Jul 15 11:29:45 2020 -0600

    more work in ECS normalization

commit 78455ec20550f3c02364e1cf89d41a1b86d8d327
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Wed Jul 15 08:04:40 2020 -0600

    more work in ECS normalization

commit 76742a1d48946d54466903525db9492a25efc574
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue Jul 14 14:34:35 2020 -0600

    more work on ECS normalization

commit be072ee1a38dad804fcd5fede05dd3e8ab472e05
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue Jul 14 09:21:39 2020 -0600

    more work in ECS normalization

commit 169efe61394b92eacd83c66d1f55d0cf8d8d0b65
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue Jul 14 08:55:16 2020 -060

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -244,7 +244,7 @@ services:
       << : *common-beats-variables
       << : *common-lookup-variables
       ES_HOSTS : 'elasticsearch:9200'
-      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Djava.security.egd=file:/dev/./urandom'
+      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Xss2m -Djava.security.egd=file:/dev/./urandom'
     depends_on:
       - elasticsearch
     expose:
