--- a/scripts/beats/windows_vm_example/Vagrantfile
+++ b/scripts/beats/windows_vm_example/Vagrantfile
@@ -48,12 +48,12 @@ Vagrant.configure("2") do |config|
     vb.customize ["modifyvm", :id, "--nested-hw-virt", "on"]
     vb.customize ["modifyvm", :id, "--graphicscontroller", "vboxsvga"]
     vb.customize ["modifyvm", :id, "--accelerate2dvideo", "on"]
-    # vb.customize ["modifyvm", :id, "--accelerate3d", "on"]
+    vb.customize ["modifyvm", :id, "--accelerate3d", "on"]
     vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
     vb.customize ["setextradata", "global", "GUI/SuppressMessages", "all" ]
     vb.customize ["modifyvm", :id, "--usb", "on"]
     vb.customize ["modifyvm", :id, "--usbehci", "on"]
-    # vb.customize ["modifyvm", :id, "--audio", "pulse", "--audiocontroller", "hda"]
+    vb.customize ["modifyvm", :id, "--audio", "pulse", "--audiocontroller", "hda"]
   end
 
   config.vm.provision "shell", inline: <<-STEP1
@@ -71,20 +71,24 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "shell", inline: <<-STEP2
     Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-    choco install -y python
+    choco install -y chocolateygui 7zip.install conemu firefox hackfont putty.install python sublimetext3 sysinternals
 
-    Invoke-WebRequest -Uri https://artifacts.elastic.co/downloads/beats/auditbeat/auditbeat-7.6.2-windows-x86_64.zip -OutFile auditbeat-7.6.2-windows-x86_64.zip -UseBasicParsing
-    Expand-Archive -LiteralPath auditbeat-7.6.2-windows-x86_64.zip -DestinationPath 'C:\\Program Files'
-    Remove-Item auditbeat-7.6.2-windows-x86_64.zip
-    Rename-Item 'C:\\Program Files\\auditbeat-7.6.2-windows-x86_64' 'C:\\Program Files\\auditbeat'
-    ((Get-Content -path 'C:\\Program Files\\auditbeat\\install-service-auditbeat.ps1' -Raw) -replace 'ProgramData','Program Files') | Set-Content -Path 'C:\\Program Files\\auditbeat\\install-service-auditbeat.ps1'
-    ((Get-Content -path 'C:\\Program Files\\auditbeat\\install-service-auditbeat.ps1' -Raw) -replace ' -path','  --path') | Set-Content -Path 'C:\\Program Files\\auditbeat\\install-service-auditbeat.ps1'
+    $beats = @("auditbeat","winlogbeat","packetbeat","metricbeat")
+    foreach ($beat in $beats) {
+      Invoke-WebRequest -Uri https://artifacts.elastic.co/downloads/beats/$beat/$beat-7.6.2-windows-x86_64.zip -OutFile $beat-7.6.2-windows-x86_64.zip -UseBasicParsing
+      Expand-Archive -LiteralPath $beat-7.6.2-windows-x86_64.zip -DestinationPath 'C:\\Program Files'
+      Remove-Item $beat-7.6.2-windows-x86_64.zip
+      Rename-Item "C:\\Program Files\\$beat-7.6.2-windows-x86_64" "C:\\Program Files\\$beat"
+      ((Get-Content -path "C:\\Program Files\\$beat\\install-service-$beat.ps1" -Raw) -replace 'ProgramData','Program Files') | Set-Content -Path "C:\\Program Files\\$beat\\install-service-$beat.ps1"
+      ((Get-Content -path "C:\\Program Files\\$beat\\install-service-$beat.ps1" -Raw) -replace ' -path','  --path') | Set-Content -Path "C:\\Program Files\\$beat\\install-service-$beat.ps1"
+    }
   STEP2
 
-  config.vm.provision "file", source: "./auditbeat.yml", destination: "C:\\Program Files\\auditbeat\\auditbeat.yml"
-  config.vm.provision "file", source: "../beat_run.py", destination: "C:\\Program Files\\auditbeat\\beat_run.py"
-  config.vm.provision "file", source: "../beat_config.py", destination: "C:\\Program Files\\auditbeat\\beat_config.py"
-  config.vm.provision "file", source: "../beat_common.py", destination: "C:\\Program Files\\auditbeat\\beat_common.py"
-
+  ["auditbeat","winlogbeat","packetbeat","metricbeat"].to_enum.with_index(1).each do |beat, i|
+    config.vm.provision "file", source: "./#{beat}.yml", destination: "C:\\Program Files\\#{beat}\\#{beat}.yml"
+    config.vm.provision "file", source: "../common/beat_run.py", destination: "C:\\Program Files\\#{beat}\\beat_run.py"
+    config.vm.provision "file", source: "../common/beat_config.py", destination: "C:\\Program Files\\#{beat}\\beat_config.py"
+    config.vm.provision "file", source: "../common/beat_common.py", destination: "C:\\Program Files\\#{beat}\\beat_common.py"
+  end
 end
 
