implement parsing of wireguard initiation packets using https://github.com/theparanoids/spicy-noise

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2085,6 +2085,47 @@ filter {
       }
     }
 
+  } else if ([source] == "spicy-noise") {
+    #############################################################################################################################
+    # spicy-noise.log
+    # https://github.com/theparanoids/spicy-noise/blob/master/zeek/spicy-noise.zeek
+
+    # rename spicy-noise to noise
+    mutate { id => "mutate_replace_zeek_source_spicy_noise"
+             replace => { "[source]" => "noise" } }
+
+    dissect {
+      id => "dissect_zeek_noise"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][msg_type]}	%{[zeek_cols][sender]}	%{[zeek_cols][receiver]}	%{[zeek_cols][unenc_ephemeral]}	%{[zeek_cols][enc_static]}	%{[zeek_cols][enc_timestamp]}	%{[zeek_cols][enc_nothing]}	%{[zeek_cols][nonce]}	%{[zeek_cols][enc_cookie]}	%{[zeek_cols][mac1]}	%{[zeek_cols][mac2]}	%{[zeek_cols][enc_payload_len]}	%{[zeek_cols][enc_payload]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_noise"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_noise"
+        init => "$zeek_noise_field_names = [ 'ts', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'msg_type', 'sender', 'receiver', 'unenc_ephemeral', 'enc_static', 'enc_timestamp', 'enc_nothing', 'nonce', 'enc_cookie', 'mac1', 'mac2', 'enc_payload_len', 'enc_payload' ]"
+        code => "event.set('[zeek_cols]', $zeek_noise_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    # for now, drop enc_payload for size
+    if ([zeek_cols][enc_payload]) {
+      mutate { id => "mutate_remove_field_zeek_noise_enc_payload"
+               remove_field => [ "[zeek_cols][enc_payload]" ] }
+    }
+
+    mutate {
+      # TODO: is this technically accurate? should it be "noise" instead/as well?
+      id => "mutate_add_field_zeek_service_wireguard"
+      add_field =>  { "[zeek_cols][service]" => "wireguard" }
+    }
+
   } else if ([source] == "ssh") {
     #############################################################################################################################
     # ssh.log
@@ -3135,6 +3176,7 @@ filter {
   } else if ([source] == "notice") {
     #############################################################################################################################
     # notice.log specific logic
+
     mutate { id => "mutate_split_zeek_notice_actions"
              split => { "[zeek_notice][actions]" => "," } }
 
