--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -16,6 +16,7 @@ filter {
       "[zeek_mqtt_publish][payload_len]" => "integer"
       "[zeek_mqtt_subscribe][granted_qos_level]" => "integer"
       "[zeek_mqtt_subscribe][qos_levels]" => "integer"
+      "[zeek_noise][enc_payload_len]" => "integer"
       "[zeek_ntp][num_exts]" => "integer"
       "[zeek_ntp][poll]" => "float"
       "[zeek_ntp][precision]" => "float"
