--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -174,6 +174,9 @@ filter {
   if ([zeek_mysql][cmd])                        { mutate { id => "mutate_merge_normalize_zeek_mysql_cmd"
                                                            merge => { "[zeek][action]" => "[zeek_mysql][cmd]" } } }
 
+  if ([zeek_noise][msg_type])                   { mutate { id => "mutate_merge_normalize_zeek_noise_msg_type"
+                                                           merge => { "[zeek][action]" => "[zeek_noise][msg_type]" } } }
+
   if ([zeek_ntlm][success]) {
     # this log entry implicitly means a login attempt
     mutate { id => "mutate_add_field_zeek_ntlm_action"
