provide a way to disable certain Zeek features via environment variables

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3356,7 +3356,12 @@ filter {
         }
       }
 
-    } # _carved
+    } else {
+      if ([zeek_signatures][signature_id] =~ /^dpd_/) {
+        # I don't care about DPD matching signatures
+        drop { id => "drop_zeek_ignored_signatures_dpd" }
+      }
+    }
 
   } else if ([source] == "sip") {
     #############################################################################################################################
