--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -51,6 +51,19 @@ x-zeek-variables: &zeek-variables
   EXTRACTED_FILE_ENABLE_FRESHCLAM : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA : 'false'
+  # environment variables for tweaking Zeek at runtime (see local.zeek)
+  # set to a non-blank value to disable the corresponding feature
+  ZEEK_DISABLE_MITRE_BZAR : ''
+  ZEEK_DISABLE_HASH_ALL_FILES : ''
+  ZEEK_DISABLE_LOG_PASSWORDS : ''
+  ZEEK_DISABLE_MODBUS_TRACKING : ''
+  ZEEK_DISABLE_MQTT : ''
+  ZEEK_DISABLE_PE_XOR : ''
+  ZEEK_DISABLE_QUIC : ''
+  ZEEK_DISABLE_SSL_VALIDATE_CERTS : ''
+  ZEEK_DISABLE_TELNET : ''
+  ZEEK_DISABLE_TRACK_ALL_ASSETS : ''
+  ZEEK_DISABLE_WIREGUARD : ''
 
 x-logstash-variables: &logstash-variables
   LOGSTASH_OUI_LOOKUP  : 'true'
